# aeronautics_area_parser

./: CMakeLists.txt  annotationhandler.h  conanfile.txt  fileparser.cpp  geoast.h  geoast_adapted.h  geolocation.cpp  geolocation.h  geolocation_def.h  geoparser.cpp  geoparser.h  geoparser_config.h  geotypes.h  geoutils.cpp  geoutils.h  geovincenty.cpp  geovincenty.h  main.cpp  old_geoparser.h  spirittest.cpp
